k8s/ing-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: codespaces-tracker-ingress
  namespace: codespaces-tracker
spec:
  rules:
  - host: codespaces-tracker.whydevslovedynatrace.com
    http:
      paths:
      - backend:
          service:
            name: codespaces-tracker
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - codespaces-tracker.whydevslovedynatrace.com
    secretName: codespaces-tracker-tls
